NATTQA-ENV/force-app/main/default/objects/CONTAINER_Audit__c/CONTAINER_Audit__c.object-meta.xml
<CustomObject>
    <label>Audit</label>
    <nameField>
        <displayFormat>AUD-{00000}</displayFormat>
        <label>Audit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audits</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>