NATTQA-ENV/force-app/main/default/objects/CONTAINER_Audit__c/fields/Actions_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Actions_Completed_Date__c</fullName>
    <label>Actions Completed Date</label>
    <type>Date</type>
</CustomField>