NATTQA-ENV/force-app/main/default/objects/CONTAINER_Audit__c/fields/CAP_Account_No__c.field-meta.xml
<CustomField>
    <fullName>CAP_Account_No__c</fullName>
    <formula>CONTAINER_ASP_Nmae_Audited__r.CONTAINER_Cap_Account_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CAP Account No</label>
    <type>Text</type>
</CustomField>