NATTQA-ENV/force-app/main/default/objects/CONTAINER_Audit__c/fields/CONTAINE_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>CONTAINE_Completion_Date__c</fullName>
    <description>Custom field for Audit object</description>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>