NATTQA-ENV/force-app/main/default/objects/CONTAINER_Audit__c/fields/Container_Account_Address__c.field-meta.xml
<CustomField>
    <fullName>Container_Account_Address__c</fullName>
    <formula>if(LEN(CONTAINER_ASP_Nmae_Audited__r.CONTAINER_Location_Street__c)&gt;0, CONTAINER_ASP_Nmae_Audited__r.CONTAINER_Location_Street__c&amp; &quot; &quot; , &quot;&quot; ) &amp; BR() &amp;
if(LEN(CONTAINER_ASP_Nmae_Audited__r.CONTAINER_Location_City__c)&gt;0, CONTAINER_ASP_Nmae_Audited__r.CONTAINER_Location_City__c&amp; &quot;, &quot; , &quot;&quot; )&amp;
if(LEN(CONTAINER_ASP_Nmae_Audited__r.CONTAINER_Location_State__c)&gt;0, CONTAINER_ASP_Nmae_Audited__r.CONTAINER_Location_State__c&amp; &quot; &quot; , &quot;&quot; )&amp;
if(LEN(CONTAINER_ASP_Nmae_Audited__r.Location_Zip_Postal_Code__c)&gt;0, CONTAINER_ASP_Nmae_Audited__r.Location_Zip_Postal_Code__c,&quot;&quot;) &amp; BR() &amp;
If(LEN( CONTAINER_ASP_Nmae_Audited__r.CONTAINER_Location_Country__c) &gt;0, CONTAINER_ASP_Nmae_Audited__r.CONTAINER_Location_Country__c,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Address</label>
    <type>Text</type>
</CustomField>