NATTQA-ENV/force-app/main/default/objects/CONTAINER_Audit__c/fields/CONTAINER_Actions_Completed__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Actions_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Custom field for Audit object</description>
    <label>Actions Completed</label>
    <type>Checkbox</type>
</CustomField>