NATTQA-ENV/force-app/main/default/objects/CONTAINER_Audit__c/fields/CONTAINER_Actions_Required__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Actions_Required__c</fullName>
    <description>Custom field for Audit object</description>
    <label>Actions Required</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>