NATTQA-ENV/force-app/main/default/objects/CONTAINER_Audit__c/fields/CONTAINER_Any_Areas_Of_Concern__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Any_Areas_Of_Concern__c</fullName>
    <description>Custom field for Audit object</description>
    <label>Any Areas Of Concern</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>