NATTQA-ENV/force-app/main/default/objects/CONTAINER_Audit__c/fields/CONTAINER_ASP_Current_Level__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_ASP_Current_Level__c</fullName>
    <formula>TEXT(CONTAINER_ASP_Nmae_Audited__r.CONTAINER_Level__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ASP Current Level</label>
    <type>Text</type>
</CustomField>