NATTQA-ENV/force-app/main/default/objects/CONTAINER_Audit__c/fields/CONTAINER_ASP_Nmae_Audited__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_ASP_Nmae_Audited__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Custom field for Audit object</description>
    <label>ASP Name Audited</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Audits</relationshipLabel>
    <relationshipName>Audits1</relationshipName>
    <type>Lookup</type>
</CustomField>