NATTQA-ENV/force-app/main/default/objects/CONTAINER_Audit__c/fields/CONTAINER_ASP_Warranty_ID__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_ASP_Warranty_ID__c</fullName>
    <formula>CONTAINER_ASP_Nmae_Audited__r.CONTAINER_Warranty_AR_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ASP Warranty ID</label>
    <type>Text</type>
</CustomField>