NATTQA-ENV/force-app/main/default/objects/CONTAINER_Audit__c/fields/CONTAINER_Audit_Year__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Audit_Year__c</fullName>
    <description>Custom field for Audit object</description>
    <label>Audit Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>