NATTQA-ENV/force-app/main/default/objects/CONTAINER_Audit__c/fields/CONTAINER_Contact_Name_Audit__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Contact_Name_Audit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Custom field for Audi object</description>
    <label>Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Audits</relationshipLabel>
    <relationshipName>Audits</relationshipName>
    <type>Lookup</type>
</CustomField>