NATTQA-ENV/force-app/main/default/objects/CONTAINER_Audit__c/fields/CONTAINER_Operating_Region__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Operating_Region__c</fullName>
    <description>Container Service Account Operating region</description>
    <formula>TEXT(CONTAINER_ASP_Nmae_Audited__r.CONTAINER_Operating_Region__c )</formula>
    <label>Operating Region</label>
    <type>Text</type>
</CustomField>