NATTQA-ENV/force-app/main/default/objects/CONTAINER_Audit__c/fields/CONTAINER_PSE__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_PSE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Custom field for Audit object</description>
    <label>PSE</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Audits</relationshipName>
    <type>Lookup</type>
</CustomField>