NATTQA-ENV/force-app/main/default/objects/CONTAINER_Audit__c/fields/CONTAINER_PSE_Completed_Internal_Documen__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_PSE_Completed_Internal_Documen__c</fullName>
    <description>Custom field for Audit object</description>
    <label>PSE Completed Internal Document</label>
    <type>Date</type>
</CustomField>