NATTQA-ENV/force-app/main/default/objects/CONTAINER_Audit__c/fields/CONTAINER_Total_Audit_Score__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Total_Audit_Score__c</fullName>
    <description>Custom field for Audit object</description>
    <label>Total Audit Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>