NATTQA-ENV/force-app/main/default/objects/CONTAINER_Audit__c/validationRules/CONTAINER_Action_Completed_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>CONTAINER_Action_Completed_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT($Permission.CONTAINER_Bypass_Validation_Rule ),
CONTAINER_Actions_Completed__c = true,   ISNULL(Actions_Completed_Date__c ))</errorConditionFormula>
    <errorDisplayField>Actions_Completed_Date__c</errorDisplayField>
    <errorMessage>Please fill the Action Completed Date</errorMessage>
</ValidationRule>