NATTQA-ENV/force-app/main/default/objects/CONTAINER_Audit__c/validationRules/CONTAINER_Provide_Valid_Audit_Year.validationRule-meta.xml
<ValidationRule>
    <fullName>CONTAINER_Provide_Valid_Audit_Year</fullName>
    <active>true</active>
    <description>Validation to populate valid audit year.</description>
    <errorConditionFormula>AND(
NOT($Permission.CONTAINER_Bypass_Validation_Rule),
OR(Not(ISNUMBER(CONTAINER_Audit_Year__c)),
LEN(CONTAINER_Audit_Year__c ) &lt;&gt; 4),
NOT(ISBLANK(CONTAINER_Audit_Year__c))
)</errorConditionFormula>
    <errorDisplayField>CONTAINER_Audit_Year__c</errorDisplayField>
    <errorMessage>Please enter a valid Year.</errorMessage>
</ValidationRule>