NATTQA-ENV/force-app/main/default/objects/CONTAINER_Audit__c/validationRules/CONTAINER_Restrict_Changes_in_New_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>CONTAINER_Restrict_Changes_in_New_Status</fullName>
    <active>true</active>
    <description>To restrict any change made in record if its in New status and Final Audit Result is blank</description>
    <errorConditionFormula>AND(
NOT($Permission.CONTAINER_Bypass_Validation_Rule),
NOT( ISNEW() ),
NOT(OR(ISPICKVAL(CONTAINER_Final_Audit_Result__c,&apos;Pass&apos;),
ISPICKVAL(CONTAINER_Final_Audit_Result__c,&apos;Fail&apos;))),
ISPICKVAL( CONTAINER_Status__c, &apos;New&apos;)
)</errorConditionFormula>
    <errorDisplayField>CONTAINER_Status__c</errorDisplayField>
    <errorMessage>Cannot Modify changes in New Status, Please Update to &quot;In Process&quot;</errorMessage>
</ValidationRule>