NATTQA-ENV/force-app/main/default/objects/CONTAINER_Audit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CONTAINER_ASP_Nmae_Audited__c</columns>
    <columns>CONTAINER_Status__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>